--- a/app/src/main/res/layout/user_info_layout.xml
+++ b/app/src/main/res/layout/user_info_layout.xml
@@ -5,23 +5,25 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <Button
+    <com.facebook.login.widget.LoginButton
         android:id="@+id/facebook_button_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="30dp"
         android:text="@string/fetch_from_facebook" />
 
     <TextView
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/create_manuel"
-        android:layout_marginLeft="3dp"
         android:layout_marginBottom="10dp"
-        android:textSize="16sp"
+        android:layout_marginLeft="3dp"
+        android:text="@string/create_manuel"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/icon_gray" />
+        android:textColor="@color/icon_gray"
+        android:textSize="16sp" />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
