--- a/app/src/main/res/layout/activity_giftcard_details.xml
+++ b/app/src/main/res/layout/activity_giftcard_details.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="android.giifty.dk.giifty.GiftcardDetailsActivity">
+    tools:context="dk.android.giifty.GiftcardDetailsActivity">
 
     <ScrollView
         android:layout_width="match_parent"
