--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -107,9 +107,9 @@
         </LinearLayout>
 
         <RelativeLayout
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp">
 
             <TextView
                 android:id="@+id/pay_with_card_id"
@@ -121,9 +121,8 @@
                 android:gravity="center"
                 android:text="Kort"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimary"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textIsSelectable="true"
+                android:textColor="@color/colorPrimary"
                 android:textSize="16sp" />
 
             <TextView
@@ -136,15 +135,24 @@
                 android:gravity="center"
                 android:text="Mobilepay"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimary"
                 android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/colorPrimary"
                 android:textSize="16sp" />
         </RelativeLayout>
 
         <FrameLayout
-            android:layout_marginTop="20dp"
             android:id="@id/fragment_container_id"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp" />
+
+        <Button
+            android:id="@+id/pay_button_id"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:text="----" />
     </LinearLayout>
 </ScrollView>
