--- a/app/src/main/res/layout/fragment_buy_giftcard.xml
+++ b/app/src/main/res/layout/fragment_buy_giftcard.xml
@@ -1,8 +1,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="android.giifty.dk.giifty.BuyGiftcardFrag">
+    tools:context=".drawerfragments.BuyGiftcardFrag">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_id"
