--- a/app/src/main/res/layout/fragment_card_payment.xml
+++ b/app/src/main/res/layout/fragment_card_payment.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PurchaseComponents.CardPaymentFrag">
+    tools:context=".purchasefragments.CardPaymentFrag">
 
     <android.support.design.widget.TextInputEditText
         android:layout_width="match_parent"
