--- a/app/src/main/res/layout/nav_header_front_page.xml
+++ b/app/src/main/res/layout/nav_header_front_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="180dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -24,19 +24,29 @@
         app:border_width="2dp"
         app:shadow="false"/>
 
-    <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="@string/logged_in_as"-->
-        <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->
-
     <TextView
         android:id="@+id/user_name_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
         android:text="-"
         android:textStyle="bold|italic"
         android:textSize="19sp" />
 
-</LinearLayout>
+    <FrameLayout
+        android:id="@+id/sign_out_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/ic_sign_out_24px" />
+    </FrameLayout>
+
+</RelativeLayout>
