--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -146,7 +146,26 @@
             android:id="@id/fragment_container_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp" />
+            android:minHeight="120dp"
+            android:layout_marginTop="20dp" >
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/progressBar_id"
+                android:layout_gravity="center" />
+
+            <TextView
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Gavekortet er desværre ved at blive købt af en anden. Ellers vil det være frit igen om 2 min."
+                android:id="@+id/gc_already_purchased_msg"
+                android:visibility="invisible"
+                android:layout_gravity="center" />
+
+
+        </FrameLayout>
 
         <Button
             android:id="@+id/pay_button_id"
@@ -155,6 +174,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="20dp"
+            android:visibility="invisible"
             android:text="----" />
     </LinearLayout>
 </ScrollView>
