--- a/app/src/main/res/layout/signin_user_dialog_layout.xml
+++ b/app/src/main/res/layout/signin_user_dialog_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="260dp"
     android:background="@drawable/bg_opret"
     android:gravity="center_horizontal"
     android:orientation="vertical">
@@ -75,7 +75,7 @@
         <Button
             android:id="@+id/signin_button_id"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:text="@string/sign_in" />
 
@@ -96,13 +96,13 @@
             android:id="@+id/progressBar_id"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/signin_button_id"
+            android:layout_centerHorizontal="true"
             android:layout_marginEnd="15dp"
             android:layout_marginStart="15dp"
-            android:layout_height="wrap_content"
             android:indeterminate="true"
-            android:visibility="invisible"
-            android:layout_alignTop="@+id/signin_button_id"
-            android:layout_centerHorizontal="true" />
+            android:visibility="invisible" />
 
     </RelativeLayout>
 </RelativeLayout>
