--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="white_transperant">#1Affffff</color>
     <color name="gray_transperant_50">#80b9b9b9</color>
     <color name="colorPrimary_transperant_50">#803F51B5</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
