--- a/app/src/main/res/layout/activity_create_image.xml
+++ b/app/src/main/res/layout/activity_create_image.xml
@@ -7,18 +7,20 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="dk.android.giifty.CreateGiftcardActivity">
+    tools:context="dk.android.giifty.CreateImageActivity">
 
     <ImageView
+        android:id="@+id/image_container_id"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/barcode_view_id" />
+        android:layout_height="match_parent"
+        android:scaleType="centerInside"
+        android:layout_above="@+id/camera_button_id" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Start scanning"
-        android:id="@+id/start_scan_id"
+    <ImageView
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:src="@drawable/ic_camera_black_24dp"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/camera_button_id" />
 </RelativeLayout>
